fix layout issues on enterprise page, add branding info

--- a/assets/css/pages/buy.css
+++ b/assets/css/pages/buy.css
@@ -42,7 +42,8 @@
 
 .buy-background {
   background-image: url("../../img/headers/enterprise.jpg");
-  background-position: bottom 0 right 0; }
+  background-position: bottom 0 right 0;
+  min-height: 700px; }
   .buy-background .menu {
     margin-top: -100px; }
 
