--- a/assets/css/pages/order.scss
+++ b/assets/css/pages/order.scss
@@ -4,6 +4,7 @@
 .buy-background {
   background-image: url("../../img/headers/enterprise.jpg");
   background-position: bottom 0 right 0;
+  min-height: 700px;
   .menu {
       margin-top: -100px;
   }
