--- a/assets/css/pages/pricing.scss
+++ b/assets/css/pages/pricing.scss
@@ -4,8 +4,9 @@
 @import '../modules/transparent-gradient';
 
 .pricing-background {
-  background-image: url('../../img/headers/enterprise.jpg');
+    background-image: url('../../img/headers/enterprise.jpg');
 	background-position: bottom 0 right 0;
+    min-height: 700px;
     .menu {
         margin-top: -100px;
     }
